# womir-openvm

./: .gitignore  CLAUDE.md  Cargo.toml  ISA.md  README.md  a  jaaf_spec.md  keccak_bug.wasm  mcp.json  openvm-client-eth.wasm  rust-toolchain.toml  womir-wasm-instructions.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/skills/openvm-constraints/: SKILL.md
.claude/skills/resolve-dep-paths/: SKILL.md  resolve.sh
.github/workflows/: nightly.yml  pr.yml
extensions/autoprecompiles/: Cargo.toml
extensions/autoprecompiles/src/: formatter.rs  lib.rs
extensions/autoprecompiles/tests/: apc_complex.rs  apc_single_instructions.rs
extensions/autoprecompiles/tests/apc_snapshots/complex/: comparison_chain.txt  comparison_equivalence.txt  copy_byte.txt  copy_word.txt  cross_width_32_to_64.txt  cross_width_64_to_32.txt  div_and_mul_inverse.txt  div_chain.txt  fill_32bytes.txt  i64load32u.txt  i64load_output_eq_base_addr.txt  i64load_output_plus_1_eq_base_addr.txt  mixed_comparisons.txt  mixed_signed_unsigned.txt  mul_chain.txt  mul_commutative.txt  same_register_not_optimized.txt  storeb_loadb_roundtrip.txt  storeb_roundtrip.txt  storeh_roundtrip.txt
extensions/autoprecompiles/tests/apc_snapshots/single_instructions/: add.txt  add_64.txt  add_imm.txt  add_imm_64.txt  and.txt  and_64.txt  and_imm.txt  and_imm_64.txt  call.txt  call_indirect.txt  const_32.txt  div.txt  div_64.txt  div_imm.txt  div_imm_64.txt  divu.txt  divu_64.txt  divu_imm.txt  divu_imm_64.txt  eq.txt  eq_64.txt  eq_imm.txt  eq_imm_64.txt  jump.txt  jump_if.txt  jump_if_zero.txt  loadb.txt  loadbu.txt  loadh.txt  loadhu.txt  loadw.txt  loadw_with_offset.txt  lt_s.txt  lt_s_64.txt  lt_u.txt  lt_u_64.txt  lt_u_imm.txt  mul.txt  mul_64.txt  mul_imm.txt  (+38 more)
extensions/autoprecompiles/tests/common/: mod.rs
extensions/circuit/: Cargo.toml
extensions/circuit/.claude/: CLAUDE.md
extensions/circuit/src/: cuda_abi.rs  extension.rs  lib.rs  phantom.rs  wom.rs  wom_traits.rs
extensions/circuit/tests/: machine_extraction.rs
extensions/crush-circuit/: Cargo.toml  build.rs
extensions/crush-circuit/.claude/: CLAUDE.md
extensions/crush-circuit/src/: crush_keccak_config.rs  cuda_abi.rs  lib.rs
extensions/crush-circuit/tests/: machine_extraction.rs
extensions/crush-translation/: Cargo.toml
extensions/crush-translation/src/: const_collapse.rs  instruction_builder.rs  lib.rs
extensions/keccak-circuit/: Cargo.toml
extensions/keccak-circuit/src/: air.rs  columns.rs  crush_compat.rs  execution.rs  extension.rs  lib.rs  trace.rs  utils.rs
extensions/openvm-transpiler/: Cargo.toml
extensions/openvm-transpiler/src/: instructions.rs  lib.rs
extensions/transpiler/: Cargo.toml
extensions/transpiler/src/: instructions.rs
extensions/womir_circuit/: Cargo.toml  build.rs
extensions/womir_circuit/.claude/: CLAUDE.md
extensions/womir_circuit/src/: constraints.rs  cuda_abi.rs  execution.rs  lib.rs  macros.rs  memory_config.rs  phantom.rs  stub.rs  test_utils.rs  utils.rs
extensions/womir_circuit/tests/: machine_extraction.rs  womir_constraints.txt
extensions/womir_translation/: Cargo.toml
extensions/womir_translation/src/: instruction_builder.rs  lib.rs
guest-io/: Cargo.toml
guest-io/src/: lib.rs
guest-keccak/: Cargo.toml
guest-keccak-go/: keccak_precompile.go  keccak_software.go
guest-keccak/src/: lib.rs
integration/: CODEX_TEST_EXECUTION_PLAN.md  Cargo.toml  build.rs
integration/builtin_src/: f32_ops.c  f64_ops.c  float_conv.c  i32_clz.c  i32_ctz.wat  memory_copy.c  memory_fill.c
integration/src/: builtin_functions.rs  cli_tests.rs  compile.rs  const_collapse.rs  instruction_builder.rs  instruction_builder_ref.rs  isolated_tests.rs  lib.rs  main.rs  proving.rs  test_stages.rs  to_field.rs  vm_tests.rs  wasm_tests.rs  wast_tests.rs  womir_translation.rs
integration/src/autoprecompiles/: adapter.rs  air.rs  basic_blocks.rs  instruction_handler.rs  mod.rs  opcodes.rs
integration/src/tests/: cli.rs  cuda_tests.rs  helpers.rs  isolated_tests.rs  mod.rs  riscv.rs  vm_tests.rs  wasm_tests.rs
powdr-wasm/: Cargo.toml  build.rs
powdr-wasm/builtin_src/: f32_ops.c  f64_ops.c  float_conv.c  i32_popcnt.wat  i64_clz.c  i64_ctz.wat  i64_popcnt.wat
powdr-wasm/src/: analyze_pgo.rs  builtin_functions.rs  compile.rs  main.rs  proving.rs
powdr-wasm/src/tests/: cli.rs  helpers.rs  isolated_tests.rs  riscv.rs  wasm_tests.rs
rv32im-wom/circuit/: Cargo.toml
rv32im-wom/transpiler/: Cargo.toml
rv32im-wom/transpiler/src/: instructions.rs  lib.rs
sample-programs/: call_indirect.wasm  fib_loop.wasm  go_keccak_precompile.wasm  go_keccak_software.wasm  n_first_sum.wasm  n_first_sum.wat
sample-programs/eth-block/: openvm-client-eth.wasm
sample-programs/go_keccak/: README.md  go.mod  io.go  main.go
sample-programs/guest_u256/: Cargo.toml
sample-programs/keccak_precompile/: Cargo.toml
sample-programs/keccak_precompile/src/: main.rs
sample-programs/keccak_riscv_precompile/: Cargo.toml
sample-programs/keccak_riscv_precompile/src/: main.rs
sample-programs/keccak_with_inputs/: Cargo.toml
sample-programs/keccak_with_inputs/src/: main.rs
sample-programs/read_serde/: Cargo.toml
sample-programs/read_serde/src/: main.rs
sample-programs/read_vec/: Cargo.toml
sample-programs/u256_matmul/: Cargo.toml
sample-programs/u256_matmul/src/: main.rs
sample_programs/: call_indirect.wat  keccak.wasm
scripts/: .gitignore  crush_vs_riscv.py  keccak_benchmark.sh  readme.md  render_summary.py  run_guest_benches.sh  run_reth_benches.sh  setup_deps.sh  womir_vs_riscv.py
tools/trace-compare/: README.md  compare_calls.py  compare_muls.py  find_first_divergence.py  find_first_divergent_write.py  trace_crash.py  verify_alu.py
wasm_tests/: add_only.wast  address.wast  br_if.wast  call.wast  call_indirect.wast  f32.wast  f64.wast  func.wast  i32.wast  i64.wast  loop.wast  memory_grow.wast  return.wast  unaligned.wast
womir-openvm/: Cargo.toml
womir-openvm/src/: instruction_builder.rs  instruction_builder_ref.rs  main.rs  womir_settings.rs  womir_translation.rs
(+346 files in other folders)
