[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = ["integration", "extensions/transpiler", "extensions/womir_circuit", "guest-io"]
resolver = "2"

[workspace.dependencies]
powdr-openvm = { git = "https://github.com/powdr-labs/powdr.git", rev = "28ab2ce", default-features = false, features = [
  "metrics",
] }
powdr-autoprecompiles = { git = "https://github.com/powdr-labs/powdr.git", rev = "28ab2ce", default-features = false }
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", rev = "28ab2ce", default-features = false }

openvm-womir-transpiler = { path = "extensions/transpiler" }

womir-circuit = { path = "extensions/womir_circuit" }

openvm-stark-sdk = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr", features = [
  "parallel",
  "jemalloc",
  "nightly-features",
  "metrics",
] }
openvm-stark-backend = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr", features = [
  "parallel",
  "jemalloc",
  "metrics",
] }
openvm-cuda-backend = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr", default-features = false }
openvm-cuda-builder = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr", default-features = false }
openvm-cuda-common = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "v1.2.2-powdr", default-features = false }
openvm-sdk = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false, features = [
  "parallel",
  "jemalloc",
  "nightly-features",
  "evm-prove",
  "metrics",
] }
openvm-circuit-primitives = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-circuit-primitives-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-circuit-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-instructions = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-instructions-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }
openvm-native-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "v1.4.2-powdr-rc.1", default-features = false }

thiserror = "1.0.65"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
derive-new = "0.6.0"
derive_more = { version = "1.0.0", features = [
  "display",
], default-features = false }
rand = { version = "0.8.5", default-features = false }
eyre = "0.6.12"
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0"
struct-reflection = { git = "https://github.com/gzanitti/struct-reflection-rs.git" }
rustc-hash = "2.0.0"
cfg-if = "1.0.0"
test-case = "3.3.1"
itertools = "0.14"

rrs-lib = "0.1.0"
tracing = "0.1.40"

womir = { git = "https://github.com/powdr-labs/womir.git", rev = "ef0be00" }
wasmparser = { version = "0.235", default-features = false }

# [patch."https://github.com/powdr-labs/openvm.git"]
# openvm-sdk = { path = "../openvm/crates/sdk" }
# openvm-circuit-primitives = { path = "../openvm/crates/circuits/primitives" }
# openvm-circuit-primitives-derive = { path = "../openvm/crates/circuits/primitives/derive" }
# openvm-circuit = { path = "../openvm/crates/vm" }
# openvm-circuit-derive = { path = "../openvm/crates/vm/derive" }
# openvm-instructions = { path = "../openvm/crates/toolchain/instructions" }
# openvm-instructions-derive = { path = "../openvm/crates/toolchain/instructions/derive" }
# openvm-rv32im-transpiler = { path = "../openvm/extensions/rv32im/transpiler" }
#
# [patch."https://github.com/powdr-labs/stark-backend.git"]
# openvm-stark-sdk = { path = "../stark-backend/crates/stark-sdk/", default-features = false }
# openvm-stark-backend = { path = "../stark-backend/crates/stark-backend/", default-features = false }
#
# [patch."https://github.com/powdr-labs/womir.git"]
# womir = { path = "../womir" }
