[package]
name = "womir-openvm-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
eyre.workspace = true
tracing.workspace = true
derive_more.workspace = true
openvm-womir-circuit = { workspace = true }
openvm-womir-transpiler = { workspace = true }
openvm-sdk = { workspace = true }
openvm-circuit = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-stark-backend = { workspace = true }
wasmparser = { workspace = true }
womir = { workspace = true }
