[package]
name = "womir-openvm-integration"
version.workspace = true
edition.workspace = true

[dependencies]
powdr-openvm = { workspace = true }
powdr-autoprecompiles = { workspace = true }
powdr-number = { workspace = true }
powdr-openvm-bus-interaction-handler = { workspace = true }
serde.workspace = true
strum = { workspace = true }
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
derive_more.workspace = true

womir-circuit = { workspace = true }

openvm-womir-transpiler = { workspace = true }
openvm-sdk = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit-primitives-derive = { workspace = true }
openvm-circuit = { workspace = true }
openvm-circuit-derive = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-transpiler.workspace = true
openvm-native-circuit = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-stark-backend = { workspace = true }
wasmparser = { workspace = true }
womir = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.43", features = ["derive"] }
itertools = { workspace = true }
arrayvec = "0.7"
num_cpus = "1.17.0"

tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = "0.1"
metrics = "0.23.0"
metrics-tracing-context = "0.16.0"
metrics-util = "0.17.0"

[dev-dependencies]
postcard = { version = "1.1", features = ["alloc"] }
