[package]
name = "womir-openvm"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
openvm-sdk = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-stark-backend = { workspace = true }
