[package]
name = "autoprecompiles"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cuda = ["powdr-openvm/cuda", "crush-circuit/cuda"]
tco = []

[dependencies]
powdr-openvm.workspace = true
# only used for the symbol table, not actually riscv specific
powdr-riscv-elf.workspace = true
derive_more.workspace = true
openvm-circuit.workspace = true
openvm-circuit-derive.workspace = true
openvm-circuit-primitives.workspace = true
openvm-instructions.workspace = true
openvm-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-crush-transpiler.workspace = true
serde.workspace = true
strum.workspace = true
crush-circuit.workspace = true
keccak-circuit.workspace = true
crush-translation.workspace = true

[dev-dependencies]
powdr-openvm = { workspace = true, features = ["test-utils"] }
powdr-autoprecompiles.workspace = true
