[package]
name = "openvm-wasm-transpiler"
description = "OpenVM transpiler extension for WASM"
version.workspace = true
edition.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
tracing = { workspace = true }
openvm-instructions-derive = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
