[package]
name = "openvm-womir-transpiler"
description = "OpenVM transpiler extension for WOMIR"
version.workspace = true
edition.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-instructions = { workspace = true }
tracing = { workspace = true }
openvm-instructions-derive = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
