[package]
name = "openvm-rv32im-transpiler"
description = "OpenVM transpiler extension for RISC-V 32-bit IM instruction set"
version.workspace = true
edition.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-instructions = { workspace = true }
tracing = { workspace = true }
openvm-instructions-derive = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
