[workspace]
[package]
name = "keccak_precompile"
version = "0.0.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "zkvm")'.dependencies]
openvm = { git = "https://github.com/powdr-labs/openvm.git", tag = "v1.4.2-powdr-rc.3" }
openvm-keccak256 = { git = "https://github.com/powdr-labs/openvm.git", tag = "v1.4.2-powdr-rc.3" }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
crush-guest-io = { path = "../../guest-io" }
crush-guest-keccak = { path = "../../guest-libs/rust/keccak" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
