[package]
name = "keccak_riscv_precompile"
version = "0.0.0"
edition = "2021"

[workspace]
members = []

[dependencies]
openvm = { git = "https://github.com/powdr-labs/openvm.git", tag = "v1.4.2-powdr-rc.3" }
openvm-keccak256 = { git = "https://github.com/powdr-labs/openvm.git", tag = "v1.4.2-powdr-rc.3" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
