[workspace]
[package]
name = "keccak_with_inputs"
version = "0.0.0"
edition = "2021"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[target.'cfg(target_os = "zkvm")'.dependencies]
openvm = { git = "https://github.com/powdr-labs/openvm.git", rev = "62c5d26" }

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
