[workspace]
[package]
name = "u256_matmul"
version = "0.0.0"
edition = "2021"

[dependencies]
ruint = { version = "1.16", default-features = false }

[target.'cfg(target_os = "zkvm")'.dependencies]
openvm = { git = "https://github.com/powdr-labs/openvm.git", rev = "62c5d26" }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
crush-guest-io = { path = "../../guest-io" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
